<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.test.MainActivity" >

    <item 
        android:id="@+id/edit_galaxy"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/edit_galaxy"/>
    
    <item android:id="@+id/play_video"
        android:title="@string/play_video"
        android:orderInCategory="200"
        android:showAsAction="never"/>
    
     <item
       android:id="@+id/contact_galaxy"
       android:orderInCategory="300"
       android:title="@string/contact_galaxy"
       android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
</menu>
