<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/editgalaxyscreen"
    android:columnCount="2"
    android:orientation="vertical"
    android:rowCount="5"
    android:useDefaultMargins="true" >
    
    <AnalogClock
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_row="0" android:layout_column="0"
        android:layout_columnSpan="2" android:layout_gravity="center_horizontal"/>
    
    <EditText
        android:id="@+id/edit_colony" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:hint="@string/hint_colony"  
        android:textColor="#FFFFFF" android:textColorHint="#FFFFFF"
        android:layout_row="1" android:layout_column="0" android:layout_gravity="end"/>
     <EditText
        android:id="@+id/edit_pop" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:hint="@string/hint_pop" 
        android:textColor="#FFFFFF" android:textColorHint="#FFFFFF"
        android:layout_row="2" android:layout_column="0" android:layout_gravity="end"/>
     <EditText
        android:id="@+id/edit_fleet" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:hint="@string/hint_fleet" 
        android:textColor="#FFFFFF" android:textColorHint="#FFFFFF" 
        android:layout_row="3" android:layout_column="0" android:layout_gravity="end"/>
    <EditText
        android:id="@+id/edit_ships" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:hint="@string/hint_ships" 
        android:textColor="#FFFFFF" android:textColorHint="#FFFFFF"
        android:layout_row="4" android:layout_column="0" android:layout_gravity="end"/>
    
    <Button
        android:id="@+id/submit_colony" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/ok_button" 
        android:textColor="#FFFFFF" android:layout_row="1"
        android:layout_column="1"/>
    <Button
        android:id="@+id/submit_pop" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/ok_button"
        android:textColor="#FFFFFF" android:layout_row="2"
        android:layout_column="1"/>
     <Button
        android:id="@+id/submit_fleet" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="#FFFFFF"
        android:text="@string/ok_button" android:layout_row="3"
        android:layout_column="1"/>
     <Button
        android:id="@+id/submit_ships" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/ok_button"
        android:textColor="#FFFFFF" android:layout_row="4"
        android:layout_column="1"/>

</GridLayout>
